------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Tue Jun 15 10:31 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Minor tweaks to Makefile

Sun May 30 00:05 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixes code to allow loading of shared libraries.

Sun May 30 00:05 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Modified tty interface to simplify it.

	* Added support for non-blocking IO on ttys.

	* Included support for graphics on direct console driver.

	* Updated serial termios support to allow baud rate to be changed.

	* Added support for ^C and ^Z to generate signals from the console.

	* Minor tweaks to select code.

	* Added socket to syscall table.

Sun May 30 00:01 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated todo file.

Fri May 28 20:04 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated bugs file.

Thu May 20 12:04 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final tweaks for 0.0.76

Mon May 17 12:29 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added Documentation/cs_write which describes code that
	  writes to the kernel code segment.

Tue May 06 17:19 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed select code, including modifications to scheduler
	  to fix timers.

Tue May 06 16:39 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Minor fix to lp driver.

Fri Apr 16 09:57 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added support for the signal(2) system call, and support
	  for signal handler functions.

Thu Feb 25 21:13 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed typo for read_only option.

Tue Feb 16 12:34 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final tweaks for 0.0.75
