@@ -20,7 +20,7 @@ CONFIG_DEFAULT_KEYMAP=y
 CONFIG_CHAR_DEV_MEM=y
 CONFIG_CHAR_DEV_RS=y
 CONFIG_CHAR_DEV_LP=y
-CONFIG_DEV_META=y
+CONFIG_DEV_META=n
 
 CONFIG_BLK_DEV_FD=n
 CONFIG_BLK_DEV_HD=n
